Kaggle Notebook | CIFAR-10 Image Identification Using ANN | Version 2

--- a/Week_4/cifar-10-image-identification-using-ann.ipynb
+++ b/Week_4/cifar-10-image-identification-using-ann.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b9f38cae",
+   "id": "378db8a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:43:40.921497Z",
-     "iopub.status.busy": "2024-02-24T06:43:40.921122Z",
-     "iopub.status.idle": "2024-02-24T06:43:58.024614Z",
-     "shell.execute_reply": "2024-02-24T06:43:58.023660Z"
+     "iopub.execute_input": "2024-02-24T07:03:36.997227Z",
+     "iopub.status.busy": "2024-02-24T07:03:36.996603Z",
+     "iopub.status.idle": "2024-02-24T07:03:53.865566Z",
+     "shell.execute_reply": "2024-02-24T07:03:53.864455Z"
     },
     "papermill": {
-     "duration": 17.110536,
-     "end_time": "2024-02-24T06:43:58.026911",
+     "duration": 16.877238,
+     "end_time": "2024-02-24T07:03:53.867979",
      "exception": false,
-     "start_time": "2024-02-24T06:43:40.916375",
+     "start_time": "2024-02-24T07:03:36.990741",
      "status": "completed"
     },
     "tags": []
@@ -25,9 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-24 06:43:42.768187: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-24 06:43:42.768294: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-24 06:43:42.924442: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-02-24 07:03:38.741505: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-24 07:03:38.741624: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-24 07:03:38.860898: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -50,19 +50,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5696d8a6",
+   "id": "dec51ab5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:43:58.034392Z",
-     "iopub.status.busy": "2024-02-24T06:43:58.033687Z",
-     "iopub.status.idle": "2024-02-24T06:44:08.119716Z",
-     "shell.execute_reply": "2024-02-24T06:44:08.118222Z"
+     "iopub.execute_input": "2024-02-24T07:03:53.876758Z",
+     "iopub.status.busy": "2024-02-24T07:03:53.876007Z",
+     "iopub.status.idle": "2024-02-24T07:04:09.452682Z",
+     "shell.execute_reply": "2024-02-24T07:04:09.451680Z"
     },
     "papermill": {
-     "duration": 10.091772,
-     "end_time": "2024-02-24T06:44:08.121778",
+     "duration": 15.583122,
+     "end_time": "2024-02-24T07:04:09.454883",
      "exception": false,
-     "start_time": "2024-02-24T06:43:58.030006",
+     "start_time": "2024-02-24T07:03:53.871761",
      "status": "completed"
     },
     "tags": []
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      "170498071/170498071 [==============================] - 8s 0us/step\n",
+      "170498071/170498071 [==============================] - 12s 0us/step\n",
       "X train shape: (50000, 32, 32, 3)\n",
       "y train shape: (50000, 1)\n",
       "X test shape: (10000, 32, 32, 3)\n",
@@ -93,19 +93,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2510d51",
+   "id": "38748b52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:44:08.140843Z",
-     "iopub.status.busy": "2024-02-24T06:44:08.140199Z",
-     "iopub.status.idle": "2024-02-24T06:44:10.701178Z",
-     "shell.execute_reply": "2024-02-24T06:44:10.700517Z"
+     "iopub.execute_input": "2024-02-24T07:04:09.472241Z",
+     "iopub.status.busy": "2024-02-24T07:04:09.471387Z",
+     "iopub.status.idle": "2024-02-24T07:04:12.437774Z",
+     "shell.execute_reply": "2024-02-24T07:04:12.436996Z"
     },
     "papermill": {
-     "duration": 2.574177,
-     "end_time": "2024-02-24T06:44:10.704716",
+     "duration": 2.980628,
+     "end_time": "2024-02-24T07:04:12.443386",
      "exception": false,
-     "start_time": "2024-02-24T06:44:08.130539",
+     "start_time": "2024-02-24T07:04:09.462758",
      "status": "completed"
     },
     "tags": []
@@ -149,13 +149,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed6436a",
+   "id": "d8c24fc4",
    "metadata": {
     "papermill": {
-     "duration": 0.011114,
-     "end_time": "2024-02-24T06:44:10.727587",
+     "duration": 0.012098,
+     "end_time": "2024-02-24T07:04:12.468391",
      "exception": false,
-     "start_time": "2024-02-24T06:44:10.716473",
+     "start_time": "2024-02-24T07:04:12.456293",
      "status": "completed"
     },
     "tags": []
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d54416c",
+   "id": "8aa393d6",
    "metadata": {
     "papermill": {
-     "duration": 0.012013,
-     "end_time": "2024-02-24T06:44:10.751230",
+     "duration": 0.012257,
+     "end_time": "2024-02-24T07:04:12.492879",
      "exception": false,
-     "start_time": "2024-02-24T06:44:10.739217",
+     "start_time": "2024-02-24T07:04:12.480622",
      "status": "completed"
     },
     "tags": []
@@ -186,19 +186,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f7b0058",
+   "id": "4fec3271",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:44:10.776682Z",
-     "iopub.status.busy": "2024-02-24T06:44:10.775972Z",
-     "iopub.status.idle": "2024-02-24T06:44:11.296461Z",
-     "shell.execute_reply": "2024-02-24T06:44:11.295189Z"
+     "iopub.execute_input": "2024-02-24T07:04:12.519895Z",
+     "iopub.status.busy": "2024-02-24T07:04:12.519546Z",
+     "iopub.status.idle": "2024-02-24T07:04:13.145561Z",
+     "shell.execute_reply": "2024-02-24T07:04:13.144766Z"
     },
     "papermill": {
-     "duration": 0.535828,
-     "end_time": "2024-02-24T06:44:11.298932",
+     "duration": 0.642682,
+     "end_time": "2024-02-24T07:04:13.147930",
      "exception": false,
-     "start_time": "2024-02-24T06:44:10.763104",
+     "start_time": "2024-02-24T07:04:12.505248",
      "status": "completed"
     },
     "tags": []
@@ -212,19 +212,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b2c513cc",
+   "id": "3f6fc64f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:44:11.325100Z",
-     "iopub.status.busy": "2024-02-24T06:44:11.324728Z",
-     "iopub.status.idle": "2024-02-24T06:44:11.412880Z",
-     "shell.execute_reply": "2024-02-24T06:44:11.412023Z"
+     "iopub.execute_input": "2024-02-24T07:04:13.174868Z",
+     "iopub.status.busy": "2024-02-24T07:04:13.174502Z",
+     "iopub.status.idle": "2024-02-24T07:04:13.410814Z",
+     "shell.execute_reply": "2024-02-24T07:04:13.409950Z"
     },
     "papermill": {
-     "duration": 0.103887,
-     "end_time": "2024-02-24T06:44:11.415119",
+     "duration": 0.252359,
+     "end_time": "2024-02-24T07:04:13.413147",
      "exception": false,
-     "start_time": "2024-02-24T06:44:11.311232",
+     "start_time": "2024-02-24T07:04:13.160788",
      "status": "completed"
     },
     "tags": []
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "947e41ad",
+   "id": "3efc17db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:44:11.439085Z",
-     "iopub.status.busy": "2024-02-24T06:44:11.438705Z",
-     "iopub.status.idle": "2024-02-24T06:44:11.483135Z",
-     "shell.execute_reply": "2024-02-24T06:44:11.482152Z"
+     "iopub.execute_input": "2024-02-24T07:04:13.440902Z",
+     "iopub.status.busy": "2024-02-24T07:04:13.440103Z",
+     "iopub.status.idle": "2024-02-24T07:04:13.512627Z",
+     "shell.execute_reply": "2024-02-24T07:04:13.511740Z"
     },
     "papermill": {
-     "duration": 0.058679,
-     "end_time": "2024-02-24T06:44:11.485393",
+     "duration": 0.089115,
+     "end_time": "2024-02-24T07:04:13.515103",
      "exception": false,
-     "start_time": "2024-02-24T06:44:11.426714",
+     "start_time": "2024-02-24T07:04:13.425988",
      "status": "completed"
     },
     "tags": []
@@ -264,13 +264,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "603844b9",
+   "id": "6f612b8d",
    "metadata": {
     "papermill": {
-     "duration": 0.011052,
-     "end_time": "2024-02-24T06:44:11.509126",
+     "duration": 0.012306,
+     "end_time": "2024-02-24T07:04:13.539800",
      "exception": false,
-     "start_time": "2024-02-24T06:44:11.498074",
+     "start_time": "2024-02-24T07:04:13.527494",
      "status": "completed"
     },
     "tags": []
@@ -282,19 +282,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "37e58659",
+   "id": "75692630",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-24T06:44:11.533336Z",
-     "iopub.status.busy": "2024-02-24T06:44:11.533031Z",
-     "iopub.status.idle": "2024-02-24T06:44:11.540013Z",
-     "shell.execute_reply": "2024-02-24T06:44:11.538986Z"
+     "iopub.execute_input": "2024-02-24T07:04:13.566718Z",
+     "iopub.status.busy": "2024-02-24T07:04:13.566363Z",
+     "iopub.status.idle": "2024-02-24T07:04:13.575583Z",
+     "shell.execute_reply": "2024-02-24T07:04:13.574274Z"
     },
     "papermill": {
-     "duration": 0.021077,
-     "end_time": "2024-02-24T06:44:11.541652",
+     "duration": 0.02531,
+     "end_time": "2024-02-24T07:04:13.577690",
      "exception": false,
-     "start_time": "2024-02-24T06:44:11.520575",
+     "start_time": "2024-02-24T07:04:13.552380",
      "status": "completed"
     },
     "tags": []
@@ -319,21 +319,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca77e2da",
+   "cell_type": "markdown",
+   "id": "452afcf2",
    "metadata": {
     "papermill": {
-     "duration": 0.011177,
-     "end_time": "2024-02-24T06:44:11.564269",
+     "duration": 0.012435,
+     "end_time": "2024-02-24T07:04:13.603333",
      "exception": false,
-     "start_time": "2024-02-24T06:44:11.553092",
+     "start_time": "2024-02-24T07:04:13.590898",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Model Creation using pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0a1c17db",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-24T07:04:13.630568Z",
+     "iopub.status.busy": "2024-02-24T07:04:13.630081Z",
+     "iopub.status.idle": "2024-02-24T07:04:13.637489Z",
+     "shell.execute_reply": "2024-02-24T07:04:13.636267Z"
+    },
+    "papermill": {
+     "duration": 0.023422,
+     "end_time": "2024-02-24T07:04:13.639339",
+     "exception": false,
+     "start_time": "2024-02-24T07:04:13.615917",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "\n",
+    "class NeuralNetwork(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init()\n",
+    "        self.fc1 = torch.nn.Linear(3072, 1024)\n",
+    "        self.relu = torch.nn.LeakyReLU(0.1)\n",
+    "        \n",
+    "        self.fc2 = torch.nn.Linear(1024, 512)\n",
+    "        self.relu = torch.nn.LeakyReLU(0.1)\n",
+    "        \n",
+    "        self.fc1 = torch.nn.Linear(512, 256)\n",
+    "        self.relu = torch.nn.LeakyReLU(0.1)\n",
+    "        \n",
+    "        self.fc1 = torch.nn.Linear(256, 175)\n",
+    "        self.relu = torch.nn.LeakyReLU(0.1)\n",
+    "        \n",
+    "        self.fc1 = torch.nn.Linear(175, 64)\n",
+    "        self.relu = torch.nn.LeakyReLU(0.1)\n",
+    "        \n",
+    "        self.fc1 = torch.nn.Linear(64, 10)\n",
+    "        #self.softmax = torch.nn.Softmax(dim=1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f2e6f78",
+   "metadata": {
+    "papermill": {
+     "duration": 0.01199,
+     "end_time": "2024-02-24T07:04:13.665013",
+     "exception": false,
+     "start_time": "2024-02-24T07:04:13.653023",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Model Creationg using Tensorflow"
+   ]
   }
  ],
  "metadata": {
@@ -365,14 +429,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 35.882403,
-   "end_time": "2024-02-24T06:44:14.521218",
+   "duration": 42.030636,
+   "end_time": "2024-02-24T07:04:16.441056",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-02-24T06:43:38.638815",
+   "start_time": "2024-02-24T07:03:34.410420",
    "version": "2.5.0"
   }
  },
